--- a/app/src/main/res/layout/dialog_game_over.xml
+++ b/app/src/main/res/layout/dialog_game_over.xml
@@ -37,6 +37,16 @@
         android:layout_marginBottom="15dp"/>
 
     <Button
+        android:id="@+id/btnViewScores"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="🏆 View High Scores"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:backgroundTint="#2196F3"
+        android:layout_marginBottom="15dp"/>
+
+    <Button
         android:id="@+id/btnMenu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
